# zkb-tree

./: AGENTS.md  Cargo.toml  LICENSE-APACHE  README.md  rust-toolchain.toml
.github/workflows/: rust.yml
fuzz/: Cargo.toml
fuzz-afl/: .gitignore  Cargo.toml
fuzz-afl/src/: btree_ops.rs
fuzz/fuzz_targets/: btree_ops.rs
scripts/: fuzz.sh
zkb-tree/: Cargo.toml
zkb-tree/benches/: btree_bench.rs
zkb-tree/btree-test-utils/: Cargo.toml
zkb-tree/btree-test-utils/src/: lib.rs
zkb-tree/proptest-regressions/: node.txt  transaction.txt
zkb-tree/src/: db.rs  errors.rs  hash.rs  lib.rs  node.rs  snapshot.rs  store.rs  transaction.rs
zkb-tree/tests/: golden_hashes.rs  multi_batch_proptest.proptest-regressions  multi_batch_proptest.rs  snapshot_tests.rs
